################################################################################
# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
author = "Eclipse Foundation uProtocol project"
documentation = "https://github.com/eclipse-uprotocol/up-spec#readme"
edition = "2021"
exclude = [
    "tests/*",
    "tools/*",
    ".devcontainer/*",
    ".vscode/*",
    ".github/*",
    ".gitignore",
]
keywords = ["uProtocol", "SDK", "MQTT", "MQTT5"]
license = "Apache-2.0"
name = "up-client-mqtt5-rust"
readme = "README.md"
repository = "https://github.com/eclipse-uprotocol/up-client-mqtt5-rust"
rust-version = "1.76"
version = "0.1.0"

[dependencies]
async-channel = {version = "1.6" } 
async-trait = { version = "0.1" }
bytes = { version = "1.5" }
env_logger = { version = "0.10" }
futures = { version = "0.3" }
log = { version = "^0.4" }
paho-mqtt = { version = "0.12.3", features = ["vendored-ssl"] }
protobuf = { version = "3.3" }
rand = { version = "0.8" }
regex = { version = "1.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.38", features = ["full"] }
tokio-macros = { version = "2.3" }
up-rust = { git = "https://github.com/eclipse-uprotocol/up-rust", rev = "da722852004f657fa8d0282369fcfccb0ccda112" }
url = { version = "2.5" }
uuid = { version = "1.7", features = ["v8"] }

[dev-dependencies]
test-case = { version = "3.3" }
